<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/newNoteMenu"
		android:title="@string/newNoteMenu"
		app:showAsAction="always" />
	<item
		android:id="@+id/loadFileMenu"
		android:title="@string/loadFileMenu" />
	<item
		android:id="@+id/saveListMenu"
		android:title="@string/saveListMenu" />
	<item
		android:id="@+id/loadListMenu"
		android:title="@string/loadListMenu" />
	<item
		android:id="@+id/browseMenu"
		android:title="@string/browseMenu" />
	<item android:title="@string/themesMenu" >
		<menu >
			<item
				android:id="@+id/lightThemeMenu"
				android:title="@string/lightThemeMenu" />
			<item
				android:id="@+id/darkThemeMenu"
				android:title="@string/darkThemeMenu" />
		</menu>
	</item>
</menu>